# classDocs

./: README.md
lessons/02_week/sandbox/01_making-connections/: compute-average-with-file.ipynb
lessons/02_week/sandbox/src/: getAverage.py  getAverage_demo.py  hello.py  openEmail_demo.py
lessons/03_week/sandbox/: quadSolver_i.py
lessons/03_week/sandbox/unittest/: squareArea.py  test_squareArea.py
lessons/05_week/sandbox/: sciKitDemo.py
lessons/05_week/sandbox/hello_user/: README.md  pyproject.toml
lessons/05_week/sandbox/hello_user/hello_user/: __init__.py  main.py  moreFun.py
lessons/05_week/sandbox/projects/hello_user/hello_user/: main.py
lessons/05_week/sandbox/sciDemo/: main.py  sciKitDemo.py  setupCommands.md
lessons/06_week/sandbox/: csvReader.py
lessons/08_week/sandbox/: base_permutations.py
lessons/10_week/sandbox/: createGen.py  main.py  seq_gen.py  seq_nonGen.py
lessons/11_week/sandbox/: cantorSet.py  myTalkingHeads_strings.py
